--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Copy repository contents via scp
+      - name: Copy reposito contents via scp
         uses: appleboy/scp-action@master
         env:
           HOST: ${{ secrets.HOST }}
