--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Copy reposito contents via scp
+      - name: Copy repository contents via scp
         uses: appleboy/scp-action@master
         with:
           HOST: ${{ secrets.HOST }}
@@ -17,7 +17,7 @@ jobs:
           PORT: ${{ secrets.PORT }}
           KEY: ${{ secrets.SSHKEY }}
           source: "."
-          target: "/var/www/senwerks.com/html"
+          target: "/home/sen/SenWerks/content"
 
       - name: Executing remote command
         uses: appleboy/ssh-action@master
@@ -26,4 +26,4 @@ jobs:
           USERNAME: ${{ secrets.USERNAME }}
           PORT: ${{ secrets.PORT }}
           KEY: ${{ secrets.SSHKEY }}
-          script: ls
+          script: "/home/sen/SenWerks/buildpelican.sh"
